--- a/software.html
+++ b/software.html
@@ -39,8 +39,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/impac-careers/job/ovFqbfwv'>Impac Mortgage Corp. Careers - Senior Software Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/zetaglobal/job/ooDVafwQ'>Zeta Global Careers - Software Engineer - AI & ML</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698331369-director-software-engineering'>PayScale Director, Software Engineering | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698330790-senior-software-engineer-with-saas-products-java-javascript-aws-agile-scrum-environment-'>Bey Senior Software Engineer with SaaS products, Java, JavaScript, AWS, agile/scrum environment. | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/impac-careers/job/ovFqbfwv'>Impac Mortgage Corp. Careers - Senior Software Developer</a></h5> 
+<p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=opyU9fwK&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nArxmMwb'>Imperva Careers - Sr. Software Engineer, Java</a></h5> 
@@ -181,7 +193,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
+<h5><a href='http://idsinternational.applytojob.com/apply/csthFvWfhM/Artificial-Intelligence-Natural-Language-Processing-Software-Engineer'>Artificial Intelligence / Natural Language Processing Software Engineer - IDS International - Career Page</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -189,7 +201,7 @@
 <p><span class="badge badge-light">Boston, Massachusetts  United States  United States Boston</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://peanut.recruitee.com/o/senior-software-engineer-backend'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://peanut.recruitee.com/o/senior-software-engineer-backend'>
       Senior Software Engineer (Backend) - Peanut
     </a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
@@ -215,11 +227,11 @@
 <p><span class="badge badge-light">Santa Clara, CASanta Clara, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://assistrcare.join.com/jobs/455116-embedded-software-engineer'>Job @ AssistMe (Berlin): Embedded Software Engineer | JOIN</a></h5> 
+<h5><a href='https://assistrcare.join.com/jobs/455116-embedded-software-engineer'>Job @ AssistMe (Berlin): Embedded Software Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://Ten10.recruiterbox.com/jobs/fk03iaw'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://Ten10.recruiterbox.com/jobs/fk03iaw'>
     Lead SDET / Lead Software Developer in Test at Ten10
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -287,11 +299,11 @@
 <p><span class="badge badge-light">Burnaby</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/wish/ee715fe2-d4b7-4fbd-8b20-1673a106dd58'>Wish - Senior Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wish/ee715fe2-d4b7-4fbd-8b20-1673a106dd58'>Wish - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSZ9VfwF&k=Job&j=orOq9fwy&__jvst=Employee+Referral&__jvsd=sSinlfwC&__jvsc=Twitter&bid=noMMlMwy'>Praxis Engineering Careers - Software Engineer  - Clearance Required</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qSZ9VfwF&k=Job&j=orOq9fwy&__jvst=Employee+Referral&__jvsd=sSinlfwC&__jvsc=Twitter&bid=noMMlMwy'>Praxis Engineering Careers - Software Engineer  - Clearance Required</a></h5> 
 <p><span class="badge badge-light">Annapolis Junction, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -299,11 +311,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-advanced-server-access-staff---principal-1539447/?gh_src=349be7cd1'>Software Engineer, Advanced Server Access (Staff / Principal) | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-advanced-server-access-staff---principal-1539447/?gh_src=349be7cd1'>Software Engineer, Advanced Server Access (Staff / Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.cv-library.co.uk/job/211090474/Java-Software-Developer-6-Months-DV-CLEARED-OUTSIDE-IR35?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Java Software Developer | 6+ Months | DV CLEARED - OUTSIDE IR35 | CV-Library.co.uk | 211090474</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.cv-library.co.uk/job/211090474/Java-Software-Developer-6-Months-DV-CLEARED-OUTSIDE-IR35?s=102981&utm_source=dlvr.it&utm_medium=twitter'>Java Software Developer | 6+ Months | DV CLEARED - OUTSIDE IR35 | CV-Library.co.uk | 211090474</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -388,7 +400,7 @@ Software Engineer at Engage in Charleston | React jobs | 42jobs.io
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://www.42jobs.io/react/jobs/8415-software-engineer'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/react/jobs/8415-software-engineer'>
 Software Engineer at Restaurant Brands International in Miami | React jobs | 42jobs.io
 
 </a></h5> 
@@ -409,7 +421,7 @@ Senior Software Engineer at Solstice Studios in Los Angeles | Rails jobs | 42job
 <p><span class="badge badge-light">Los Angeles Los Angeles, CA</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=o3PQafwC&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=nkmJlMw1'>Compuware Careers - Entry-level Software Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q9CaVfwA&k=Job&j=o3PQafwC&__jvst=Employee&__jvsd=sqltphwp&__jvsc=Twitter&bid=nkmJlMw1'>Compuware Careers - Entry-level Software Developer</a></h5> 
 <p><span class="badge badge-light">Detroit</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -448,18 +460,6 @@ Senior Software Engineer at Solstice Studios in Los Angeles | Rails jobs | 42job
 <h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909843'>Job Application for Senior Software Engineer (Back-end) at Signifyd</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909852'>Job Application for Senior Software Engineer (Front-end) at Signifyd</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/signifyd95/jobs/1909879'>Job Application for Software Engineer (Back-end) at Signifyd</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-27</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHW9Vfwr&k=Job&j=oB51afwB&__jvst=Employee&__jvsd=sFWIogws&__jvsc=Twitter&bid=nVyGlMwL'>Silver Peak Systems Careers - Cloud Application Software Engineer</a></h5> 
-<p><span class="badge badge-light">Santa Clara, California</span></p>
-<p>Posted on:: 2019-10-27</p>
 <hr/>
 
 
